syntax = "proto3";

option csharp_namespace = "HireFire.Grpc";

service RepresentativeService {
  rpc CreateRepresentative (CreateRepRequest) returns (RepresentativeResponse);
}

message CreateRepRequest {
  string name = 1;
  string email = 2;
  string password_hash = 3;
  string position = 4;
}

message RepresentativeResponse {
  int64 id = 1;
  string name = 2;
  string email = 3;
  string position = 4;
}
